# AirCursor

./: .gitignore  README.md  README_zh_CN.md  app.py  build.yaml  control.py  installer-arm64.nsi  installer-x64.nsi  main.py  pyproject.toml  recognize.py  requirements-macos.txt  requirements.txt  requirements_linux.txt  setup.py  utils.py
.github/workflows/: build.yaml
build_config/: installer-arm64.nsi  installer-x64.nsi  installer.nsi  pysidedeploy-macos-latest-arm64.spec  pysidedeploy-macos-latest-x64.spec  pysidedeploy-ubuntu-latest-arm64.spec  pysidedeploy-ubuntu-latest-x64.spec  pysidedeploy-windows-arm64.spec  pysidedeploy-windows-x64.spec
build_tmp/: AirCursor.desktop
model/: gesture_recognition.py
pages/: WelcomePage.py
resources/: resources.qrc
resources/imgs/: icon.icns
translations/: main_en.ts  main_zh_CN.qm  main_zh_CN.ts  rc_translations.py  translations.qrc
