[project]
name = "AirCursor"
version = "0.0.1-alpha"
description = "Interact with your PC directly with your hands!"

[tool.cxfreeze]
executables = [
    {
        script = "main.py", 
        icon = "resources/imgs/icon"
    }
]

# 包含额外的资源文件
include_files = [
    ["resources", "resources"],
    ["model", "model"],
]

# macOS 特定配置
[tool.cx_Freeze.bdist_mac]
bundle_name = "AirCursor"  # 应用程序名称
iconfile = "resources/imgs/icon.icns"
include_resources = [
    ["resources", "resources"],
    ["model", "model"],
]

# macOS DMG 特定配置
[tool.cx_Freeze.bdist_dmg]
volume_label = "AirCursor Installer"  # 磁盘映像的名称
show_icon_preview = true                      # 图标大小
applications_shortcut = true         # 添加到 /Applications 快捷方式

# Windows 特定配置
[tool.cx_Freeze.bdist_msi]
upgrade_code = "{dd5eb33e-0728-4d44-bb7b-f1838d5a08c4}"  # 升级代码（GUID）
install_icon = "resources/imgs/icon.ico"  # 安装图标

# Linux RPM 特定配置
[tool.cx_Freeze.bdist_rpm]
requires = ["python3", "PySide6"]  # 依赖项
icon = "resources/imgs/icon.svg"  # 图标文件

# Linux DEB 特定配置
[tool.cx_Freeze.bdist_deb]
depends = ["python3", "python3-pyside6"]  # Debian 依赖项