[project]
name = "AirCursor"
version = "0.0.1-alpha"
description = "Interact with your PC directly with your hands!"
author = "Vanilla"
url = "https://github.com/dev-Vanilla/AirCursor"

[tool.cxfreeze]
executables = [
    {script = "main.py", target_name = "AirCursor", base = "gui", icon = "resources/imgs/icon"}
]

# macOS DMG 特定配置
[tool.cx_Freeze.bdist_dmg]
volume_label = "AirCursor Installer"  # 磁盘映像的名称
show_icon_preview = true 
applications_shortcut = true         # 添加到 /Applications 快捷方式

# Windows 特定配置
[tool.cx_Freeze.bdist_msi]
upgrade_code = "{dd5eb33e-0728-4d44-bb7b-f1838d5a08c4}"  # 升级代码（GUID）
install_icon = "resources/imgs/icon.ico"  # 安装图标

# Linux RPM 特定配置
[tool.cx_Freeze.bdist_rpm]
url = "https://github.com/dev-Vanilla/AirCursor"
requires = ["python3", "PySide6"]  # 依赖项
icon = "resources/imgs/icon.svg"  # 图标文件

# Linux DEB 特定配置
[tool.cx_Freeze.bdist_deb]
depends = ["python3", "python3-pyside6"]  # Debian 依赖项